--- a/profile.html
+++ b/profile.html
@@ -3,44 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZEGEKWE MYOMTER PORTIFOLIO</title>
+    <title>myomter profile</title>
 </head>
 <body>
-    <!-- Header Section -->
     <header>
-        <h1>ZEGEKWE MYOMTER PORTIFOLIO</h1>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About Me</li>
-                <li>Hobbies</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Bio Section -->
-    <section>
-        <h2>About Me</h2>
-        <p>I am a passionate software developer with experience in building innovative and efficient solutions. I enjoy solving complex problems and continuously learning about new technologies in the ever-evolving tech world.</p>
-        
+        <h1>Zegekwe Myomter Profile page</h1>
+      </header>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#hobbies">Hobbies</a>
+      </nav>
+      <section>
+        <h2>bio section</h2>
+        <p>I am a passionate software developer with experience in <br>building innovative and efficient solutions. <br>I enjoy solving complex problems and continuously <br>learning about new technologies in the ever-evolving tech world.</p>
+        <img src="https://via.placeholder.com/150" alt="Placeholder image of profile">
+        <ol>
+            <li>coding</li>
+            <li>reading</li>
+            <li>football</li>
+        </ol>
     </section>
-
-    <!-- Hobbies Section -->
-    <section>
-        <h2>Hobbies</h2>
-        <ul>
-            <li>Coding</li>
-            <li>Reading</li>
-            <li>Playing sports</li>
-        </ul>
-    </section>
-
-    <!-- Contact Section -->
-    <section>
+      <footer>
         <h2>Contact</h2>
         <p>Email: matthewzegekwe@gmail.com</p>
         <p>Phone: 07044919390 <br>09026238263</p>
-    </section>
+      </footer>
 </body>
 </html>
