--- a/profile.html
+++ b/profile.html
@@ -3,31 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myomter profile</title>
+    <title>Zegekwe Myomter Profile</title>
 </head>
 <body>
+    <!-- Header Section -->
     <header>
-        <h1>Zegekwe Myomter Profile page</h1>
-      </header>
-      <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#hobbies">Hobbies</a>
-      </nav>
-      <section>
-        <h2>bio section</h2>
-        <p>I am a passionate software developer with experience in <br>building innovative and efficient solutions. <br>I enjoy solving complex problems and continuously <br>learning about new technologies in the ever-evolving tech world.</p>
-        <img src="https://via.placeholder.com/150" alt="Placeholder image of profile">
+        <h1>Zegekwe Myomter Profile Page</h1>
+    </header>
+
+    <!-- Navigation Menu -->
+    <nav>
+        <ul>
+            <li><a href="#home" title="Go to Home">Home</a></li>
+            <li><a href="#about" title="Learn About Me">About</a></li>
+            <li><a href="#hobbies" title="Explore My Hobbies">Hobbies</a></li>
+        </ul>
+    </nav>
+
+    <!-- Bio Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I am a passionate software developer with experience in building innovative and efficient solutions. I enjoy solving complex problems and continuously learning about new technologies in the ever-evolving tech world.</p>
+        <img src="https://via.placeholder.com/150" alt="Placeholder image of Zegekwe Myomter" />
+    </section>
+
+    <!-- Hobbies Section -->
+    <section id="hobbies">
+        <h2>My Hobbies</h2>
         <ol>
-            <li>coding</li>
-            <li>reading</li>
-            <li>football</li>
+            <li>Coding</li>
+            <li>Reading</li>
+            <li>Playing Football</li>
         </ol>
     </section>
-      <footer>
+
+    <!-- Footer Section -->
+    <footer>
         <h2>Contact</h2>
-        <p>Email: matthewzegekwe@gmail.com</p>
-        <p>Phone: 07044919390 <br>09026238263</p>
-      </footer>
+        <p>Email: <a href="mailto:matthewzegekwe@gmail.com">matthewzegekwe@gmail.com</a></p>
+        <p>Phone: 07044919390, 09026238263</p>
+    </footer>
 </body>
 </html>
