--- a/profile.html
+++ b/profile.html
@@ -1,47 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zegekwe Myomter Profile</title>
-</head>
-<body>
-    <!-- Header Section -->
-    <header>
-        <h1>Zegekwe Myomter Profile Page</h1>
-    </header>
-
-    <!-- Navigation Menu -->
-    <nav>
-        <ul>
-            <li><a href="#home" title="Go to Home">Home</a></li>
-            <li><a href="#about" title="Learn About Me">About</a></li>
-            <li><a href="#hobbies" title="Explore My Hobbies">Hobbies</a></li>
-        </ul>
-    </nav>
-
-    <!-- Bio Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I am a passionate software developer with experience in building innovative and efficient solutions. I enjoy solving complex problems and continuously learning about new technologies in the ever-evolving tech world.</p>
-        <img src="https://via.placeholder.com/150" alt="Placeholder image of Zegekwe Myomter" />
-    </section>
-
-    <!-- Hobbies Section -->
-    <section id="hobbies">
-        <h2>My Hobbies</h2>
-        <ol>
-            <li>Coding</li>
-            <li>Reading</li>
-            <li>Playing Football</li>
-        </ol>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:matthewzegekwe@gmail.com">matthewzegekwe@gmail.com</a></p>
-        <p>Phone: 07044919390, 09026238263</p>
-    </footer>
-</body>
-</html>
+<header>
+    <h1>My Web Adventures</h1>
+  </header>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+  </nav>
+  <section>
+    <h2>Chapter 1: The Basics</h2>
+    <p>HTML is amazing!</p>
+  </section>
+  <footer>
+    <p>© 2025 My Web Adventures</p>
+  </footer>
+  
