--- a/profile.html
+++ b/profile.html
@@ -1,15 +1,34 @@
-<header>
-    <h1>My Web Adventures</h1>
-  </header>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-  </nav>
-  <section>
-    <h2>Chapter 1: The Basics</h2>
-    <p>HTML is amazing!</p>
-  </section>
-  <footer>
-    <p>© 2025 My Web Adventures</p>
-  </footer>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>myomter profile</title>
+</head>
+<body>
+    <header>
+        <h1>Zegekwe Myomter Profile page</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#hobbies">Hobbies</a>
+          </nav>
+      </header>
+      
+      <section>
+        <h2>bio section</h2>
+        <p>I am a passionate software developer with experience in <br>building innovative and efficient solutions. <br>I enjoy solving complex problems and continuously <br>learning about new technologies in the ever-evolving tech world.</p>
+        <img src="https://via.placeholder.com/150" alt="Placeholder image of profile">
+        <ol>
+            <li>coding</li>
+            <li>reading</li>
+            <li>football</li>
+        </ol>
+    </section>
+      <footer>
+        <h2>Contact</h2>
+        <p>Email: matthewzegekwe@gmail.com</p>
+        <p>Phone: 07044919390 <br>09026238263</p>
+      </footer>
+</body>
+</html>
