--- a/blog.html
+++ b/blog.html
@@ -1,15 +1,38 @@
-<header>
-    <h1>My Web Adventures</h1>
-  </header>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-  </nav>
-  <section>
-    <h2>Chapter 1: The Basics</h2>
-    <p>HTML is amazing!</p>
-  </section>
-  <footer>
-    <p>© 2025 My Web Adventures</p>
-  </footer>
-  
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My First Webpage</title>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+    <p>This is my first webpage!</p>
+
+      <div>
+  <h2>About Me</h2>
+  <p>Hi, I’m a web explorer!</p>
+  <a href="https://adventures.com">Visit my blog!</a>
+</div>
+
+      
+  </body><form>
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" />
+  <input type="submit" value="Submit" />
+</form>
+
+    <header>
+  <h1>My Web Adventures</h1>
+</header>
+<nav>
+  <a href="#home">Home</a>
+  <a href="#about">About</a>
+</nav>
+<section>
+  <h2>Chapter 1: The Basics</h2>
+  <p>HTML is amazing!</p>
+</section>
+<footer>
+  <p>© 2025 My Web Adventures</p>
+</footer>
+
+</html>
