--- a/advance.html
+++ b/advance.html
@@ -1,98 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZEGEKWE laptops.</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fictional Product</title>
+  <style>
+    /* General Styles */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+
+    h1, h2 {
+      text-align: center;
+    }
+
+    a {
+      text-decoration: none;
+      color: white;
+    }
+
+    /* Hero Section */
+    .hero {
+      background: linear-gradient(to right, #4facfe, #00f2fe);
+      color: white;
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    .hero-content {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .cta-btn {
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top: 20px;
+      background: #007bff;
+      border-radius: 5px;
+    }
+
+    /* Features Section */
+    .features {
+      padding: 50px 20px;
+      background: #f9f9f9;
+    }
+
+    .features h2 {
+      margin-bottom: 20px;
+    }
+
+    .features-grid {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .feature {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 20px;
+      width: 30%;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .feature img {
+      max-width: 50px;
+      margin-bottom: 10px;
+    }
+
+    @media (max-width: 768px) {
+      .features-grid {
+        flex-direction: column;
+      }
+
+      .feature {
+        width: 100%;
+      }
+    }
+
+    /* Footer Section */
+    .footer {
+      background: #333;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+    }
+  </style>
 </head>
-<style>
-   body{
-     font: 15px/1.5 Arial, Helvetica,sans-serif;
-  padding:0;
-  margin:0;
-  background-color:#49be0475;
-   }
-
-   .button{
-  height:38px;
-  background:#860db6;
-  border:0;
-  padding-left: 20px;
-  padding-right:20px;
-  color:#ffffff;
-}
-
-.welcome{
-  min-height:400px;
-  background-color: #bbff00;
-  background-position: center;
-  background-size: cover;
-  text-align:center;
-  color:#ffffff;
-}
-
-/* Boxes */
-#boxes{
-  margin-top:20px;
-  height: 40px;
-}
-
-#boxes .box{
-  float:left;
-  text-align: center;
-  width:30%;
-  padding:10px;
-}
-
-#boxes .box img{
-  width:90px;
-}
-
-footer{
-  padding:20px;
-  margin-top:20px;
-  color:#bbff00;
-  background-color:#450ce4;
-  text-align: center;
-  height: 50px;
-}
-</style>
 <body>
-    <!-- Hero Section -->
-     <section class="welcome">
-        <h1>WELCOME TO ZEGEKWE LAPTOPS</h1>
-        <h4>Our service inclue : sales of laptop and it accessories, repair of laptops, system installation and solution to internet services</h4>
-        <br>
-        <button class="button">Learn more</button>
-     </section>
+  <!-- Hero Section -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Welcome to FutureX</h1>
+      <p>Revolutionizing the way you connect with technology.</p>
+      <a href="#features" class="cta-btn">Learn More</a>
+    </div>
+  </header>
 
-     <!-- Responsive feature Section -->
-    
-     <section id="boxes">
-        <div class="container">
-          <div class="box">
-            <img src="./img/logo_html.png">
-            <h3>Laptop</h3>
-            <p>we offer different brands of laptops for sell</p>
-          </div>
-          <div class="box">
-            <img src="./img/logo_css.png">
-            <h3>internet services</h3>
-            <p>we have experts who will hand your internet issues</p>
-          </div>
-          <div class="box">
-            <img src="./img/logo_brush.png">
-            <h3>Graphic Design</h3>
-            <p>we give best graphics desigh ever</p>
-          </div>
-        </div>
-      </section>
+  <!-- Build a Responsive Future Section -->
+  <section class="features" id="features">
+    <h2>Key Features</h2>
+    <div class="features-grid">
+      <div class="feature">
+        <img src="icon1.png" alt="Feature 1 Icon">
+        <h3>Innovative Design</h3>
+        <p>Experience cutting-edge aesthetics built for modern living.</p>
+      </div>
+      <div class="feature">
+        <img src="icon2.png" alt="Feature 2 Icon">
+        <h3>Seamless Integration</h3>
+        <p>Connect effortlessly across all your devices.</p>
+      </div>
+      <div class="feature">
+        <img src="icon3.png" alt="Feature 3 Icon">
+        <h3>Eco-Friendly</h3>
+        <p>Built with sustainability in mind, for a greener future.</p>
+      </div>
+    </div>
+  </section>
 
-      <!-- for footer section -->
-       <footer>
-        <h2>Contact</h2>
-        <p>Email: matthewzegekwe@gmail.com</p>
-        <p>Phone: 07044919390 <br>09026238263</p>
-       </footer>
+  <!-- Footer Section -->
+  <footer class="footer">
+    <p>Contact us: email@example.com | +1 123-456-7890</p>
+    <p>&copy; 2025 FutureX. All rights reserved.</p>
+  </footer>
 </body>
 </html>
