--- a/advance.html
+++ b/advance.html
@@ -128,7 +128,7 @@
 
   <!-- Footer Section -->
   <footer class="footer">
-    <p>Contact us: email@example.com | +1 123-456-7890</p>
+    <p>Contact us: matthewzegekwe@gmail.com | +2347044919390</p>
     <p>&copy; 2025 FutureX. All rights reserved.</p>
   </footer>
 </body>
